force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/tc9_pr__Override_TC9P_Validation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting to temporarily override code validation</description>
    <label>Override TC9P Validation</label>
</CustomObject>