force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_eau__OV_Lodgement_Error_AU__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__OV_Lodgement_Error_AU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Lodgement Error object</description>
    <inlineHelpText>Temporarily override code validation on the Lodgement Error object</inlineHelpText>
    <label>Override Lodgement Error AU</label>
    <type>Checkbox</type>
</CustomField>