force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_et__OV_Award_Classification_Level__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__OV_Award_Classification_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Award Classification/Level object</description>
    <inlineHelpText>Temporarily override code validation on the Award Classification/Level object</inlineHelpText>
    <label>Override Award Classification/Level</label>
    <type>Checkbox</type>
</CustomField>