force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_et__OV_Employment_Cost_Item__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__OV_Employment_Cost_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Employment Cost Item object</description>
    <inlineHelpText>Temporarily override code validation on the Employment Cost Item object</inlineHelpText>
    <label>Override Employment Cost Item</label>
    <type>Checkbox</type>
</CustomField>