force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_et__OV_Expense__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__OV_Expense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Expense object</description>
    <inlineHelpText>Temporarily override code validation on the Expense object</inlineHelpText>
    <label>Override Expense</label>
    <type>Checkbox</type>
</CustomField>