force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_et__OV_Invoiceable_Fee__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__OV_Invoiceable_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Invoiceable Fee object</description>
    <inlineHelpText>Temporarily override code validation on the Invoiceable Fee object</inlineHelpText>
    <label>Override Invoiceable Fee</label>
    <type>Checkbox</type>
</CustomField>