force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_et__OV_Mark_Up_Margin_Rate_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__OV_Mark_Up_Margin_Rate_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Mark Up / Margin Rate Record object</description>
    <inlineHelpText>Temporarily override code validation on the Mark Up / Margin Rate Record object</inlineHelpText>
    <label>Override Mark Up / Margin Rate Record</label>
    <type>Checkbox</type>
</CustomField>