force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_et__OV_Pay_Rate_Loading__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__OV_Pay_Rate_Loading__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Pay Rate Loading object</description>
    <inlineHelpText>Temporarily override code validation on the Pay Rate Loading object</inlineHelpText>
    <label>Override Pay Rate Loading</label>
    <type>Checkbox</type>
</CustomField>