force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_et__OV_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__OV_Payment_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Payment Terms object</description>
    <inlineHelpText>Temporarily override code validation on the Payment Terms object</inlineHelpText>
    <label>Override Payment Terms</label>
    <type>Checkbox</type>
</CustomField>