force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_et__OV_Rate_Calculator_Junction__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__OV_Rate_Calculator_Junction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Rate Calculator Junction object</description>
    <inlineHelpText>Temporarily override code validation on the Rate Calculator Junction object</inlineHelpText>
    <label>Override Rate Calculator Junction</label>
    <type>Checkbox</type>
</CustomField>