force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_et__OV_Rate_Calculator_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__OV_Rate_Calculator_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Rate Calculator Rate object</description>
    <inlineHelpText>Temporarily override code validation on the Rate Calculator Rate object</inlineHelpText>
    <label>Override Rate Calculator Rate</label>
    <type>Checkbox</type>
</CustomField>