force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_et__OV_Timesheet_Entry__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__OV_Timesheet_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Timesheet Entry object</description>
    <inlineHelpText>Temporarily override code validation on the Timesheet Entry object</inlineHelpText>
    <label>Override Timesheet Entry</label>
    <type>Checkbox</type>
</CustomField>