force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Allowance_Template__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Allowance_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Allowance Template object</description>
    <inlineHelpText>Temporarily override code validation on the Allowance Template object</inlineHelpText>
    <label>Override Allowance Template</label>
    <type>Checkbox</type>
</CustomField>