force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Assignment object</description>
    <inlineHelpText>Temporarily override code validation on the Assignment object</inlineHelpText>
    <label>Override Assignment</label>
    <type>Checkbox</type>
</CustomField>