force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Assignment_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Assignment_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Assignment Rate object</description>
    <inlineHelpText>Temporarily override code validation on the Assignment Rate object</inlineHelpText>
    <label>Override Assignment Rate</label>
    <type>Checkbox</type>
</CustomField>