force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Assignment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Assignment_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Assignment Schedule object.</description>
    <inlineHelpText>Temporarily override code validation on the Assignment Schedule object.</inlineHelpText>
    <label>Override Assignment Schedule</label>
    <type>Checkbox</type>
</CustomField>