force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Deduction_Template__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Deduction_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Deduction Template object</description>
    <inlineHelpText>Temporarily override code validation on the Deduction Template object</inlineHelpText>
    <label>Override Deduction Template</label>
    <type>Checkbox</type>
</CustomField>