force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Leave_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Leave Rule object</description>
    <inlineHelpText>Temporarily override code validation on the Leave Rule object</inlineHelpText>
    <label>Override Leave Rule</label>
    <type>Checkbox</type>
</CustomField>