force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Leave_Rule_Item__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Leave_Rule_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Leave Rule Item object</description>
    <inlineHelpText>Temporarily override code validation on the Leave Rule Item object</inlineHelpText>
    <label>Override Leave Rule Item</label>
    <type>Checkbox</type>
</CustomField>