force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Pay_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the PayBatch object.</description>
    <label>Override Pay Batch</label>
    <type>Checkbox</type>
</CustomField>