force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Pay_Batch_Event__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Pay_Batch_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Pay Batch Event object</description>
    <inlineHelpText>Temporarily override code validation on the Pay Batch Event object</inlineHelpText>
    <label>Override Pay Batch Event</label>
    <type>Checkbox</type>
</CustomField>