force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Pay_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Pay Code object</description>
    <inlineHelpText>Temporarily override code validation on the Pay Code object</inlineHelpText>
    <label>Override Pay Code</label>
    <type>Checkbox</type>
</CustomField>