force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Pay_Transaction__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Pay_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Pay Transaction object</description>
    <inlineHelpText>Temporarily override code validation on the Pay Transaction object</inlineHelpText>
    <label>Override Pay Transaction</label>
    <type>Checkbox</type>
</CustomField>