force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Payee_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Payee_Aggregate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Payee Aggregate object</description>
    <inlineHelpText>Temporarily override code validation on the Payee Aggregate object</inlineHelpText>
    <label>Override Payee Aggregate</label>
    <type>Checkbox</type>
</CustomField>