force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Payee_Allowance_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Payee_Allowance_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Payee Allowance Record object</description>
    <inlineHelpText>Temporarily override code validation on the Payee Allowance Record object</inlineHelpText>
    <label>Override Payee Allowance Record</label>
    <type>Checkbox</type>
</CustomField>