force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Payment_Detail__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Payment_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Payment Detail object</description>
    <inlineHelpText>Temporarily override code validation on the Payment Detail object</inlineHelpText>
    <label>Override Payment Detail</label>
    <type>Checkbox</type>
</CustomField>