force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Payment_File__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Payment_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Payment File</label>
    <type>Checkbox</type>
</CustomField>