force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__OV_Suspension__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__OV_Suspension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Suspension object.</description>
    <label>Override_Suspension</label>
    <type>Checkbox</type>
</CustomField>