force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__Override_Calendar__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Calendar object</description>
    <inlineHelpText>Temporarily override code validation on the Calendar object</inlineHelpText>
    <label>Override Calendar</label>
    <type>Checkbox</type>
</CustomField>