force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__Override_Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_Calendar_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Calendar Period object</description>
    <inlineHelpText>Temporarily override code validation on the Calendar Period object</inlineHelpText>
    <label>Override Calendar Period</label>
    <type>Checkbox</type>
</CustomField>