force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__Override_Pay_Code_Junction__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_Pay_Code_Junction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily override code validation on the Pay Code Junction object</description>
    <inlineHelpText>Temporarily override code validation on the Pay Code Junction object</inlineHelpText>
    <label>Override Pay Code Junction</label>
    <type>Checkbox</type>
</CustomField>