force-app/main/default/objects/tc9_pr__Override_TC9P_Validation__c/fields/tc9_pr__System_Access__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__System_Access__c</fullName>
    <label>System Access</label>
    <length>30</length>
    <type>Text</type>
</CustomField>